fix width of line and footer and gap restored

--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ main {
 
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 40px;
     justify-content: center;
     align-items: center;
 }
